add text to slides

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,6 +47,7 @@ en:
         image: Image
         caption: Caption
         link_url: Link
+        body: Text body
       refinery/image_slideshows/image_slideshow:
         title: Title
         height: Height
